--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
-    "editor.hover.enabled": false,
-    "editor.minimap.enabled": false,
-    "window.zoomLevel": 1.2,
+   "editor.hover.enabled": false,
+   "editor.minimap.enabled": false,
 
  // raspberry pi
-   //  "editor.fontSize": 15,
+   // "window.zoomLevel": 1.2,
+   // "editor.fontSize": 15,
 
- windows
-    "editor.fontSize": 17,
+ // windows
+   "window.zoomLevel": 1.0,
+   "editor.fontSize": 17,
     
  // ipad
-    // "editor.fontSize": 18,
+   // "editor.fontSize": 18,
 }
