--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,17 @@
 {
-   "editor.hover.enabled": false,
-   "editor.minimap.enabled": false,
+  "editor.hover.enabled": false,
+  "editor.minimap.enabled": false,
 
- // raspberry pi
-   "window.zoomLevel": 1.0,
-   "editor.fontSize": 16,
+  // raspberry pi
+  "window.zoomLevel": 1.0,
+  "editor.fontSize": 16,
+  "python.pythonPath": "C:\\Users\\terak\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
 
- // windows10
+  // windows10
   //  "window.zoomLevel": 1.0,
   //  "editor.fontSize": 15,
-    
- // ipad
-   //  "window.zoomLevel": 1.0,
-   // "editor.fontSize": 18,
+  
+  // ipad
+  //  "window.zoomLevel": 1.0,
+  // "editor.fontSize": 18,
 }
